--- a/index.html
+++ b/index.html
@@ -19,12 +19,19 @@
     </section>
     <section class="bmi-section">
         <div class="bmi-section-inner">
+             <div class="first-inner-section">
             <div class="input-area">
             <label for="">Weight</label>
            <input class="bmi-input" placeholder="Weight in kilogram"  type="number"/>
            <label for="">Height</label>
            <input class="bmi-input" placeholder="height in meter"  type="number"/>
+        <button  id="calculate-bmi">Calculate</button>
         </div>
+        <div class="bmi-result">
+            <img src="./images/question.jpg"/>
+        </div>
+        </div>
+        
         </div>
       
     </section>
