added interpretation to bmi result

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button  id="calculate-bmi" onclick="weightValue()">Calculate</button>
         
         </div>
-        <div class="bmi-result">
+        <div class="bmi-result" id="bmi-result">
             <img src="./images/question.jpg"/>
         </div>
         </div>
