worked on the reset button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
            <label for="">Height (m)</label>
            <input class="bmi-input" placeholder="Example 1.52" id="height" type="number"/>
         <button  id="calculate-bmi" onclick="weightValue()">Calculate</button>
+        <button  id="reset-bmi" onclick="resetValue()">Reset</button>
         
         </div>
         <div class="bmi-result" id="bmi-result">
