implemented functionality of weight checker

--- a/index.html
+++ b/index.html
@@ -48,37 +48,27 @@
             <h3>Weight</h3>
             <div class="weight-conversion-inner">
             <div class="weight-conversion-inner-unit">
-                <label for="Ib">Ib</label>
-                <input class="bmi-input" type="text"/>
+                <label for="">Pounds</label>
+                <input class="bmi-input" id="poundValue" type="text" oninput="poundUnit()"/>
             </div>
             <p>to</p>
             <div class="weight-conversion-inner-unit">
                 <label for="">Kilogram</label>
-                <input class="bmi-input" type="text"/>
+                <input class="bmi-input" id="kgpoundValue" type="text"/>
             </div>
         </div>
         <div class="weight-conversion-inner">
             <div class="weight-conversion-inner-unit">
-                <label for="">Calories</label>
-                <input class="bmi-input" type="text"/>
+                <label for="">Gram</label>
+                <input class="bmi-input" id="gramValue" oninput="gramUnit()" type="text"/>
             </div>
             <p>to</p>
             <div class="weight-conversion-inner-unit">
                 <label for="">Kilogram</label>
-                <input class="bmi-input" type="text"/>
+                <input class="bmi-input" id="kggramValue"  type="text"/>
             </div>
         </div>
-        <div class="weight-conversion-inner">
-            <div class="weight-conversion-inner-unit">
-                <label for="">Pound</label>
-                <input class="bmi-input" type="text"/>
-            </div>
-            <p>to</p>
-            <div class="weight-conversion-inner-unit">
-                <label for="">Kilogram</label>
-                <input class="bmi-input" type="text"/>
-            </div>
-        </div>
+        
         </div>
         
         </div>
