--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
     <title>myBMI</title>
 </head>
 <body>
-    <section>
-        <h1>My BMI</h1>
+    <section class="container">
+        <!-- Header start -->
+        <div class="header">
+            <img src="./BMI images/BMI 3.jpg" alt="bmi image">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Check BMI</a></li>
+                    <li><a href="#">BMI info</a></li>
+                </ul>
+            </nav>
+        </div>
     </section>
     <section></section>
     <section></section>
