--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
                 </ul>
             </nav>
         </div>
+        <!-- Header end -->
+        <!-- Content start -->
+        <div class="content">
+            <p>Lorem ipsum dolor sit amet.</p>
+            <a class="con-btn" href="#">Check your BMI</a>
+        </div>
     </section>
     <section></section>
     <section></section>
