--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="container">
         <!-- Header start -->
         <div class="header">
-            <img src="./BMI images/BMI 3.jpg" alt="bmi image">
+            <h1>myBMI</h1>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -26,6 +26,7 @@
             <p>Lorem ipsum dolor sit amet.</p>
             <a class="con-btn" href="#">Check your BMI</a>
         </div>
+        <!-- Content end -->
     </section>
     <section></section>
     <section></section>
