another commit on styling

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Header end -->
         <!-- Content start -->
         <div class="content">
-            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Odit, voluptatem?</p><br>
             <a class="con-btn" href="#">Check your BMI</a>
         </div>
         <!-- Content end -->
