changed main color and removed empty values

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
         <div class="bmi-section-inner">
             <div class="input-warning" id="input-warning">
                 <button class="input-warning-cancel" onclick="cancelWarning()">x</button>
-                <p> Kindly fill the input area completely</p>
+                <p> Incomplete input area </p>
                
             </div>
-             <div class="first-inner-section">
+            <h2 >BMI Calculator</h2>
+             <div class="first-inner-section">  
             <div class="input-area">
             <label for="">Weight (kg)</label>
            <input class="bmi-input" id="weight" placeholder="Example 62"  type="number" onfocus="inputValue()"  />
