--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/11e1fca62a.js" crossorigin="anonymous"></script>
     <title>myBMI</title>
 </head>
 <body>
@@ -13,7 +14,33 @@
     </section>
     <section></section>
     <section></section>
-    <footer></footer>
+    <footer>
+            <div class="col-1">
+                <h3>USEFUL LINKS</h3>
+                <a href="#">Home</a>
+                <a href="#">Check BMI</a>
+                <a href="#">BMI info</a>
+            </div>
+            <div class="col-2">
+                <h3>Newsletter</h3>
+            <form>
+                <input type="email" placeholder="Your Email Address" required>
+                <br>
+                <button type="submit">SUBSCRIBE NOW</button>
+            </form>
+            </div>
+            <div class="col-3">
+                <h3>CONTACT</h3>
+                <p>Email: bmi@gmail.com</p>
+                <div class="social-icon">
+                    <i class="fa-regular fa-envelope"></i>
+                    <i class="fa-solid fa-phone"></i>
+                    <i class="fa-brands fa-github"></i>
+
+                </div>
+            </div>
+
+    </footer>
     <script src="main.js" ></script>
 </body>
 </html>
