made adjustments to the webpage and added area for newsletter

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         </div>
 
     </section>
+    <div class="newsletter"></div>
     <section class="bmi-section">
         <div class="bmi-section-inner">
             <h2 >BMI Calculator</h2>
