further modifications on bmi-info section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-        <div class="bmi_section">
+        <div class="bmi_section" id="second-bmi_section">
             <div class="bmi_img">
                 <img src="img/bmi2.jpg" alt="">
             </div>
@@ -98,7 +98,7 @@
 
     </section>
     <div class="newsletter"></div>
-    <section class="bmi-section">
+    <section class="bmi-section" id="bmi-calculation">
         <div class="bmi-section-inner">
             <h2 >BMI CALCULATOR</h2>
             <div class="input-warning" id="input-warning">
