started work on newsletter

--- a/index.html
+++ b/index.html
@@ -97,7 +97,13 @@
         </div>
 
     </section>
-    <div class="newsletter"></div>
+    <div class="newsletter">
+        <div class="newsletter-inner">
+        <h2>Sign Up For Our Newsletter</h2>
+        <input type="email" placeholder="Email address">
+        <button>Sign Up</button>
+    </div>
+    </div>
     <section class="bmi-section" id="bmi-calculation">
         <div class="bmi-section-inner">
             <h2 >BMI CALCULATOR</h2>
