--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Check BMI</a></li>
-                    <li><a href="infoBMI.html">BMI info</a></li>
+                    <li><a href="#bmi_contect">BMI info</a></li>
+                    <li><a href="#bmi-calculation">Check BMI</a></li>
                 </ul>
             </nav>
         </div>
@@ -31,7 +31,7 @@
         <!-- Content start -->
         <div class="content">
             <p>Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Odit, voluptatem?</p><br>
-            <a class="con-btn" href="#">Check your BMI</a>
+            <a class="con-btn" href="#bmi-calculation">Check your BMI</a>
         </div>
         <!-- Content end -->
     </section>
@@ -222,8 +222,8 @@
             <div class="col-1">
                 <h3>USEFUL LINKS</h3>
                 <a href="#">Home</a>
-                <a href="#">Check BMI</a>
                 <a href="#">BMI info</a>
+                <a href="#">Check BMI</a>
             </div>
             <div class="col-2">
                 <h3>Newsletter</h3>
