--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
         <!-- Header start -->
         <div class="header">
             <h1>myBMI</h1>
-            <nav>
+            <nav id="navLinks">
+                <i class="fa-solid fa-circle-xmark" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#bmi_contect">BMI info</a></li>
                     <li><a href="#bmi-calculation">Check BMI</a></li>
                 </ul>
             </nav>
+            <i class="fa fa-bars" onclick="showMenu()"></i>
         </div>
         <!-- Header end -->
         <!-- Content start -->
