--- a/index.html
+++ b/index.html
@@ -14,20 +14,32 @@
     <script src="https://kit.fontawesome.com/11e1fca62a.js" crossorigin="anonymous"></script>
     <title>myBMI</title>
 </head>
-<body>
+<body id="body">
     <section class="container">
         <!-- Header start -->
-        <div class="header">
+        <div class="header" >
             <h1>myBMI</h1>
             <nav id="navLinks">
-                <i class="fa-solid fa-circle-xmark" onclick="hideMenu()"></i>
-                <ul>
+                <!-- <i class="fa-solid fa-circle-xmark" onclick="hideMenu()"></i> -->
+                <ul >
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#bmi_contect">BMI info</a></li>
                     <li><a href="#bmi-calculation">Check BMI</a></li>
                 </ul>
             </nav>
-            <i class="fa fa-bars" onclick="showMenu()"></i>
+            <nav id="mobileNav">
+             
+                <i class="fa-solid fa-circle-xmark" id="cancelNav"  onclick="hideMenu()""></i>
+           
+                <ul >
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#bmi_contect">BMI info</a></li>
+                    <li><a href="#bmi-calculation">Check BMI</a></li>
+                </ul>
+            </nav>
+              <div>
+            <i class="fa fa-bars" id="bars" onclick="showMenu()"></i>
+        </div>
         </div>
         <!-- Header end -->
         <!-- Content start -->
