--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 </ul>
             </nav>
             <nav id="mobileNav">
-             
+             <div class="cancel-button">
                 <i class="fa-solid fa-circle-xmark" id="cancelNav"  onclick="hideMenu()""></i>
-           
+            </div>
                 <ul >
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#bmi_contect">BMI info</a></li>
