made additions to the footer area

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <a href="#">Check BMI</a>
             </div>
             <div class="col-2">
-                <h3>Newsletter</h3>
+                <h3>NEWSLETTER</h3>
             <form>
                 <input type="email" placeholder="Your Email Address" required>
                 <br>
