formatted the style sheet

--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
        
             <div class="col-1">
                 <h3>USEFUL LINKS</h3>
-                <a href="#">Home</a>
-                <a href="#">BMI info</a>
-                <a href="#">Check BMI</a>
+                <a href="index.html">Home</a>
+                <a href="#bmi_contect">BMI info</a>
+                <a href="#bmi-calculation">Check BMI</a>
             </div>
             <div class="col-2">
                 <h3>NEWSLETTER</h3>
