added arrow down image

--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
            
              <div class="first-inner-section">  
             <div class="input-area">
-            <label for="">Weight (kg)</label>
+            <label for="weight">Weight (kg)</label>
            <input class="bmi-input" id="weight" placeholder="Example 62"  type="number" onfocus="inputValue()"   />
            <!-- <div class="bmi-input" id="weight" placeholder="Example 62"  type="number" onfocus="inputValue()" ></div> -->
-           <label for="">Height (m)</label>
+           <label for="height">Height (m)</label>
            <input class="bmi-input" placeholder="Example 1.52" id="height" type="number" onfocus="inputValue()" />
         <button  id="calculate-bmi" onclick="weightValue()">Calculate</button>
         <button  id="reset-bmi" onclick="resetValue()">Reset</button>
@@ -176,6 +176,9 @@
             <div class="arrow-image">
             <img src="./images/arrow-right.jpg"/>
             </div>
+            <div class="arrow-down-image">
+                <img src="./images/arrow-down.png"/>
+                </div>
             <!-- <p>to</p> -->
             <div class="weight-conversion-inner-unit">
                 <p>Kilogram</p>
@@ -190,6 +193,9 @@
             <div class="arrow-image">
                 <img src="./images/arrow-right.jpg"/>
                 </div>
+                <div class="arrow-down-image">
+                    <img src="./images/arrow-down.png"/>
+                    </div>
             <div class="weight-conversion-inner-unit">
                 <p>Kilogram</p>
                 <div class="bmi-input-result" id="kggramValue"  ></div>
@@ -205,6 +211,9 @@
             <div class="arrow-image">
                 <img src="./images/arrow-right.jpg"/>
                 </div>
+                <div class="arrow-down-image">
+                    <img src="./images/arrow-down.png"/>
+                    </div>
             <div class="weight-conversion-inner-unit">
                 <p>Meter</p>
                 <div class="bmi-input-result" id="meterfeetValue" ></div>
@@ -218,6 +227,9 @@
             <div class="arrow-image">
                 <img src="./images/arrow-right.jpg"/>
                 </div>
+                <div class="arrow-down-image">
+                    <img src="./images/arrow-down.png"/>
+                    </div>
             <div class="weight-conversion-inner-unit">
                 <p>Meter</p>
                 <div class="bmi-input-result" id="meterinchesValue"  ></div>
@@ -231,6 +243,9 @@
             <div class="arrow-image">
                 <img src="./images/arrow-right.jpg"/>
                 </div>
+                <div class="arrow-down-image">
+                    <img src="./images/arrow-down.png"/>
+                    </div>
             <div class="weight-conversion-inner-unit">
                 <p >Meter</p>
                 <div class="bmi-input-result" id="metercentimeterValue"  ></div>
