made the navbar fixed

--- a/index.html
+++ b/index.html
@@ -258,14 +258,14 @@
     </section>
     <!-- End BMI check -->
     <!-- Footer  -->
-    <div class="footer-outer">
+    <section class="footer-outer">
         <footer>
        
             <div class="col-1">
                 <h3>USEFUL LINKS</h3>
-                <a href="#">Home</a>
-                <a href="#">BMI info</a>
-                <a href="#">Check BMI</a>
+               <a href="index.html">Home</a>
+               <a href="#bmi_contect">BMI info</a>
+                <a href="#bmi-calculation">Check BMI</a>
             </div>
             <div class="col-2">
                 <h3>NEWSLETTER</h3>
@@ -287,7 +287,7 @@
             </div>
         </div>
     </footer>
-</div>
+</section>
     <script src="main.js" ></script>
 </body>
 </html>
