removed on click effect on reset input button

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             </div>
         </div>
 
-        <button  id="reset-input-field" onclick="resetValue()">Reset</button>
+        <button  id="reset-input-field" >Reset</button>
     </div>
         
         </div>
